# tms_final_project

./: .gitignore  Dockerfile  Jenkinsfile  README.md  conftest.py  pyproject.toml  test_login_page.py  test_product_page.py
pages/: base_page.py  data.py  locators.py  login_page.py  main_page.py  product_page.py
